--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="container">
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
 
